<resources>
    <string name="app_name">DSS-SURVEY Monitor 2017-2018</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٹرویو شروع کریں </string>
    <string name="nextSection"> اگلا سیکشن </string>
    <string name="addMember"> افراد کا اندراج </string>
    <string name="dcstatus"> انٹریو کا نتیجہ</string>
    <string name="complete"> مکمل</string>
    <string name="incomplete">نا مکمل</string>
    <string name="secALabel">HH Identification and Visit Status</string>
    <string name="sec2A"> سیکشن 2A: بنیادی معلومات </string>
    <string name="secBLabel">  سیکشن بی: خاندان کے تمام افراد کی فہرست </string>
    <string name="secCLabel"> سیکشن سی:گزشتہ ایک سال کے دوران انتقال ہونے والے  افراد</string>
    <string name="secDLabel">سیکشن ڈی: گھریلوں تعمیر</string>
    <string name="secELabel">سیکشن ای : ہاتھ دھونا</string>
    <string name="secFLabel">سیکشن ایف :منتخب شدہ ماؤں کی گزشتہ پیداواری معلومات</string>
    <string name="secGLabel">سیکشن جی :خاندانی منصوبہ بندی(حمل کی تفصیلات کی طرف جائیں ) </string>
    <string name="secHLabel">سیکشن ایچ :ضرورت جو پوری نہ ہوسکی</string>
    <string name="secILabel">سیکشن آئی :شیر خوار اور بڑے بچوں کی غذا</string>
    <string name="secJLabel">سیکشن  جے: بچے کی صحت کی معلومات</string>
    <string name="secKLabel"> سیکشن کے:حفاظتی ٹیکے</string>
    <string name="secLLabel">سیکشن ایل :گھریلو خوراک ی ناقص تحفظ، خوراک کا استعمال اور تبدیل</string>
    <string name="dcl2heading"> خاندان کی غذا سے متعلق نمنٹے کی حکمت عملی </string>
    <string name="dcl3heading"> بھوک کا پیمانہ ( گزشتہ ایک ماہ کے متعلق) </string>
    <string name="secMLabel">سیکشن ایم: گھر کا ماحول</string>
    <string name="days">دنوں کی تعداد</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dcother">دیگر(وضاحت کریں)</string>
    <string name="dcdkn">معلوم نہیں</string>
    <string name="dcyes">ہاں</string>
    <string name="dcno">نہیں</string>
    <string name="dcna">قابل اطلاق نہیں</string>
    <string name="dctimes">تعداد</string>
    <string name="dcmale"> مرد </string>
    <string name="dcfemale"> عورت </string>
    <string name="Frequency"> تعداد </string>
    <string name="dcpro01">پروفیشنل / ٹیکنیکل / مینیجریل</string>
    <string name="dcpro02">کلرک</string>
    <string name="dcpro03">سہولتیں مہیا کرنا</string>
    <string name="dcpro04">مستری</string>
    <string name="dcpro05">مزدور</string>
    <string name="dcpro06">گھریلو نوکر</string>
    <string name="dcpro07">ذراعت</string>
    <string name="dcpro08">کاروبار</string>
    <string name="dcpro09">چھوٹی دکان / چھوٹا کاروبار</string>
    <string name="dcpro10">بیروزگار</string>
    <string name="dcpro11">رٹائرڈ</string>
    <string name="dcpro12">ہائوس وائف</string>
    <string name="dcitimes">کل دن یا رات میں کتنی بار استعمال کیا تھا؟</string>
    <string name="dca03">3) DSS ID </string>
    <string name="dca04">4۔ کیا اجازت مل گئی؟ </string>
    <string name="dca0403"> گھر بند ہے / اجازت دینے والا موجود نہیں ہے۔ </string>
    <string name="dca05">5)  جواب دہندہ کا نام </string>
    <string name="dca0501"> جنس </string>
    <string name="dca0502"> رشتہ </string>
    <string name="dca050201"> ماں </string>
    <string name="dca050202"> دیکھ بھال کرنیوالا </string>
    <string name="dca0503"> عمر </string>
    <string name="dca0504"> تعلیم </string>
    <string name="dca0505"> پیشہ </string>
    <string name="dca06">6) گھر کے سربراہ کے نام </string>
    <string name="dca0601"> جنس </string>
    <string name="dca060101"> مرد </string>
    <string name="dca060102"> عورت </string>
    <string name="dca0602"> عمر </string>
    <string name="dca0603"> تعلیم </string>
    <string name="dca0604"> پیشہ </string>
    <string name="dca07">7) اس گھر میں آپ کے ساتھ اور کتنے افراد رہتے ہیں؟ (بچوں کو شامل کر کے تعداد بتائیں) </string>
    <string name="dca0701"> ٹوٹل </string>
    <string name="dca0702"> مرد </string>
    <string name="dca0703"> عورتیں </string>
    <string name="dca08">8) اس گھر میں پانچ سال سے کم عمر کے کتنے بچے ہیں؟ </string>
    <string name="dca0801"> ٹوٹل </string>
    <string name="dca0802"> بچے </string>
    <string name="dca0803"> بچیاں </string>
    <string name="dca09"> 9) یہاں کتنے عرصے سے رہائش پزیر ہیں؟
    (ایک سال سے کم ہوتو مہینوں میں لکھیں) </string>
    <string name="dca0901"> تاریخ پیدائش سے </string>
    <string name="dca0902"> 2010سے قبل </string>
    <string name="dca0903"> دوسرے علاقے سے ہجرت </string>
    <string name="dca09m"> مہینے </string>
    <string name="dca09y"> سال </string>
    <string name="dca10">10) آپ یہاں ہجرت کرنے سے پہلے کہاں رہائش پذیر تھے؟ </string>
    <string name="dca10a"> شہر کا نام لکھیں</string>
    <string name="dca10b">جگہ کا نام لکھیں</string>
    <string name="dca11">11) آپ کے خاندان کا رہنے کا طریقہ کیا ہے؟ </string>
    <string name="dca1101"> انفرادی طور پر </string>
    <string name="dca1102"> مشترکہ طور پر </string>
    <string name="dcba"> گھر کے فرد کا نام </string>
    <string name="dcbid"> شناختی نمبر </string>
    <string name="dcbb"> رشتے کی شناخت </string>
    <string name="dcbbrhh"> گھر کے سربراہ سے رشتہ </string>
    <string name="dcbbrhh01"> سربراہ </string>
    <string name="dcbbrhh02"> میاں یا بیوی </string>
    <string name="dcbbrhh03"> بیٹا یا بیٹی </string>
    <string name="dcbbrhh04"> داماد/ بہو </string>
    <string name="dcbbrhh05"> پوتا/ پوتی </string>
    <string name="dcbbrhh06"> ماں باپ </string>
    <string name="dcbbrhh07"> ساس سسر </string>
    <string name="dcbbrhh08"> بھائی بہن </string>
    <string name="dcbbrhh09"> دوسرے رشتہ دار </string>
    <string name="dcbbrhh10"> گود لیا گیا / سوتیلا بچہ </string>
    <string name="dcbbrhh11"> غیر متعلقہ افراد </string>
    <string name="dcbbfid"> والد </string>
    <string name="dcbbmid"> والدہ </string>
    <string name="dcbc"> ازدواجی حیثیت </string>
    <string name="dcbc01"> شادی شدہ </string>
    <string name="dcbc02"> طلاق یافتہ یا الگ رہنا </string>
    <string name="dcbc03"> بیوہ / رنڈو۱ </string>
    <string name="dcbc04"> غیر شادی شدہ </string>
    <string name="dcbd"> جنس </string>
    <string name="dcbdm"> مرد </string>
    <string name="dcbdf"> عورت </string>
    <string name="dcbe"> تعلیم </string>
    <string name="dcbm"> ارکان کی حیثیت </string>
    <string name="dcbm01"> شادی شدہ عورت </string>
    <string name="dcbm02"> شوہر </string>
    <string name="dcbm03"> بچہ </string>
    <string name="dcbm04"> دیگر افراد </string>
    <string name="dcbe01"> غیر تعلیم یافتہ/ناخواندہ </string>
    <string name="dcbe02"> ابتدائی تعلیم پانچ سال سے کم </string>
    <string name="dcbe03"> پرائمری اسکول پانچ سال تک پڑھے ہوئے </string>
    <string name="dcbe04"> آٹھویں تک </string>
    <string name="dcbe05"> میٹرک تک </string>
    <string name="dcbe06"> انٹر تک </string>
    <string name="dcbe07"> بی اے اور اس سے زیادہ </string>
    <string name="dcbe08"> مدرسہ </string>
    <string name="dcbe09"> پانچ سال سے کم تعلیم یافتہ </string>
    <string name="dcbf"> شعبہ </string>
    <string name="dcbf01"> تجارت </string>
    <string name="dcbf02"> گاڑی چلانے والا </string>
    <string name="dcbf03"> مچھیرا </string>
    <string name="dcbf04"> کسان </string>
    <string name="dcbf05"> مزدور </string>
    <string name="dcbf06"> سرکاری ملازم </string>
    <string name="dcbf07"> ہنر مند افراد </string>
    <string name="dcbf08"> زمیندار/غیر سرکاری ملازمت </string>
    <string name="dcbf09"> گھرمیں رہنے والی خواتین </string>
    <string name="dcbf10"> دکاندار </string>
    <string name="dcbf11"> طالبعلم </string>
    <string name="dcbf12"> استاد </string>
    <string name="dcbf13"> ٹھیکدار </string>
    <string name="dcbf14"> بیروزگار </string>
    <string name="dcbf15"> ریٹائرڈ </string>
    <string name="dcbf16"> غیر سرکاری ملازمت </string>
    <string name="dcbf17"> فیکٹری میں کام کرنےوالے </string>
    <string name="dcAge"> تاریخ پیدائش  /  عمر </string>
    <string name="dcbg"> تاریخ پیدائش </string>
  <string name="dcAgeatDeath"> تاریخ پیدائش / وفات کی عمر </string>
    <string name="dcbh"> عمر </string>
    <string name="dcbhy"> سال </string>
    <string name="dcbhm"> مہینہ </string>
    <string name="dcbhd"> دن </string>
    <string name="dcbi"> موجودہ حیثیت </string>
    <string name="dcbis"> حیثیت </string>
    <string name="dcbis01"> پیدائش سے </string>
    <string name="dcbis02"> اندرونی ہجرت </string>
    <string name="dcbis03"> بیرونی ہجرت </string>
    <string name="dcbis04"> اندورنی علاقے میں ہی ایک جگہ سے دوسری جگہ منتقل ہونا </string>
    <string name="dcbis05"> موت </string>
    <string name="dcbidt"> کی تاریخ</string>
    <string name="dcbidt1"> تاریخ </string>
    <string name="dcbidt01"> پیدائش کی تاریخ </string>
    <string name="dcbidt02"> ہجرت کی تاریخ </string>
    <string name="dcbidt03"> ہجرت کی تاریخ </string>
    <string name="dcbidt04"> ہجرت کی تاریخ </string>
    <string name="dcbidt05"> اموات کی تاریخ </string>
    <string name="dcbir"> تبصرہ </string>
    <string name="dcbir01">ابتدائی نقل مکانی</string>
    <string name="dcbir02">جس جگہ سے نقل مکانی کی جا رہی ہے </string>
    <string name="dcbir03"> ابتدائی / جہاں پہنچنا ہو</string>
    <string name="dcca"> مرنے والوں کے نام </string>
    <string name="dccb"> رشتے کی شناخت </string>
    <string name="dcd01">1) کیا آپ بے نظیر انکم سپورٹ پروگرام کا حصہ ہیں /انرول ہیں </string>
    <string name="dcd0104"> یہ BISP کے بارے میں نہیں جانتے</string>
    <string name="dcd06">6) آپ کے مکان کی مالکانہ حیثیت کیا ہے ؟ </string>
    <string name="dcd0601"> اپنا </string>
    <string name="dcd0602"> کرائے کا </string>
    <string name="dcd0603"> تحفے میں ملا ہوا </string>
    <string name="dcd13">13) عام طور پر آپ کے گھر میں کون سی زبان بولی جاتی ہے؟ </string>
    <string name="dcd1301"> اردو </string>
    <string name="dcd1302"> سندھی </string>
    <string name="dcd1303"> پنجابی </string>
    <string name="dcd1304"> پشتو </string>
    <string name="dcd1305"> بلوچی </string>
    <string name="dcd1306"> بنگالی </string>
    <string name="dcd1307"> سرائیکی </string>
    <string name="dce01"> 1) برائے مہربانی اس جگہ کا مشاہدہ کرائیں جہاں آپ اور آپ کے گھروں کے لوگ عموماً ہاتھ دھوتے ہیں </string>
    <string name="dce0101"> مشاہدہ </string>
    <string name="dce0102"> مشاہدہ نہیں کیا </string>
    <string name="dce0103"> مشاہدے کی اجازت نہیں دی </string>
    <string name="dce02"> 2) گھر کی مخصوص جگہ پر پانی اور ہاتھ دھونے کی سہولیت کا مشاہدہ کیا ۔ </string>
    <string name="dce0201"> پانی موجود ہے </string>
    <string name="dce0202"> پانی موجود نہیں </string>
    <string name="dce03"> 3) غور کریں کہ صابن یا دیگر اشیاء ہاتھ دھونے کے لیے موجود ہے </string>
    <string name="dce0301"> صابن </string>
    <string name="dce0302"> ڈرجنٹ/پاوڈر/مائع/پیسٹ </string>
    <string name="dce0303"> مائع صابن </string>
    <string name="dce0304"> راکھ / مٹی/ ریت </string>
    <string name="dce04"> 4) کیا آپ کے گھر میں صابن یا دیگر اشیاء کی سہولت گھر میں یاتھ دھونے کے لیے مہیاءہے </string>
    <string name="dce05"> 5) کیا آپ مجھے وہ چیزیں دیکھائیں گے </string>
    <string name="dce0501"> صابن </string>
    <string name="dce0502"> ڈرجنٹ/پاوڈر/مائع/پیسٹ </string>
    <string name="dce0503"> مائع صابن </string>
    <string name="dce0504"> رکھ / مٹی/ ریت </string>
</resources>